Add feature to enable global and per page banner

--- a/layouts/_partials/header.html
+++ b/layouts/_partials/header.html
@@ -1,2 +1,10 @@
+{{ with .Site.Params.modules.neodoc.banner }}
+    {{ partial "banner.html" . }}
+{{ end -}}
+
+{{ with .Page.Params.banner }}
+    {{ partial "banner.html" . }}
+{{ end }}
+
 <h1>{{ site.Title }}</h1>
 {{ partial "menu.html" (dict "menuID" "main" "page" .) }}
