--- a/layouts/_partials/header.html
+++ b/layouts/_partials/header.html
@@ -14,7 +14,7 @@
     <em class="text-xl not-italic font-bold">{{ site.Title }}</em>
 
     <div class="flex gap-5">
-        <button>
+        <button x-on:click="showSearch = ! showSearch">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                 <g fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2">
                     <path d="m21 21l-4.34-4.34" />
@@ -62,6 +62,25 @@
         <div>theme</div>
         <div>socials</div> -->
     </nav>
+</div>
+
+<div x-show="showSearch" x-transition class="absolute top-0 left-0 w-full h-screen bg-zinc-900 z-101">
+    <div class="flex gap-4 items-center bg-zinc-800 p-4">
+        <button x-on:click="showSearch = ! showSearch">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                <path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                    d="m12 19l-7-7l7-7m7 7H5" />
+            </svg>
+        </button>
+
+        <form action="">
+            <input type="search" placeholder="Type to search" autofocus class="
+                text-zinc-200
+                w-full
+                focus:outline-none
+            ">
+        </form>
+    </div>
 </div>
 
 <div class="
