--- a/layouts/_partials/header.html
+++ b/layouts/_partials/header.html
@@ -6,17 +6,13 @@
     {{ partial "banner.html" . }}
 {{ end }}
 
-<div class="
-    bg-zinc-300 dark:bg-zinc-950 p-4
-    flex justify-between
-    border-b border-zinc-800
-">
+<div class="flex justify-between p-4">
     <em class="text-xl not-italic font-bold">
         <a href="/">{{ site.Title }}</a>
     </em>
 
     <div class="flex gap-5">
-        <button x-on:click="showSearch = ! showSearch">
+        <button x-on:click="showSearch = !showSearch">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                 <g fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2">
                     <path d="m21 21l-4.34-4.34" />
@@ -25,7 +21,7 @@
             </svg>
         </button>
 
-        <button x-on:click="showMenuStatic = ! showMenuStatic">
+        <button x-on:click="showMenuStatic = !showMenuStatic">
             <template x-if="!showMenuStatic">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                     <g fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2">
@@ -47,7 +43,7 @@
 </div>
 
 <div
-    class="absolute bg-zinc-900 w-full h-screen z-100 pt-8"
+    class="bg-nav2 dark:bg-nav absolute w-full h-screen pt-8"
     x-show="showMenuStatic"
     x-transition
 >
@@ -66,8 +62,8 @@
     </nav>
 </div>
 
-<div x-show="showSearch" x-transition class="absolute top-0 left-0 w-full h-screen bg-zinc-900 z-101">
-    <div class="flex gap-4 items-center bg-zinc-800 p-4">
+<div x-show="showSearch" x-transition class="bg-nav2 dark:bg-nav absolute top-0 left-0 w-full h-screen">
+    <div class="flex gap-4 items-center p-4">
         <button x-on:click="showSearch = ! showSearch">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                 <path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -77,7 +73,6 @@
 
         <form action="">
             <input type="search" placeholder="Type to search" autofocus class="
-                text-zinc-200
                 w-full
                 focus:outline-none
             ">
@@ -85,11 +80,7 @@
     </div>
 </div>
 
-<div class="
-    bg-zinc-300 dark:bg-zinc-950
-    px-4 py-3
-    flex justify-between
-">
+<div class="flex justify-between px-4 py-3">
     <div class="flex gap-3 items-center">
         <button>
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
@@ -100,7 +91,7 @@
         Frame > Bottom Bracket
     </div>
 
-    <button  x-on:click="showToc = ! showToc">
+    <button  x-on:click="showToc = !showToc">
         <template x-if="!showToc">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                 <path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -117,7 +108,7 @@
     </button>
 </div>
 
-<div x-show="showToc" x-data="closeToc()" @click="closeToc($event)" class="px-4 py-5 border-t border-zinc-800 absolute bg-zinc-950 w-full" x-transition>
+<div x-show="showToc" x-data="closeToc()" @click="closeToc($event)" class="bg-nav2 dark:bg-nav absolute w-full px-4 py-5" x-transition>
     <h3 class="uppercase text-sm mb-3">On this page</h3>
     {{ .Page.TableOfContents }}
 </div>
