--- a/layouts/baseof.html
+++ b/layouts/baseof.html
@@ -4,21 +4,20 @@
   {{ partial "head.html" . }}
 </head>
 
-<body class="
-    bg-brand-50 dark:bg-brand-950
-    text-brand-950 dark:text-brand-50
-    text-lg
-"
+<body
+    class="bg-brand-50 dark:bg-brand-950 text-brand-950 dark:text-brand-50 text-lg"
     x-data="{ showMenuStatic: false, showSearch: false }"
     :class="{ 'overflow-hidden': showMenuStatic || showSearch }"
 >
     <header class="bg-nav2 dark:bg-nav sticky top-0" x-data="{ showToc: false }">
         {{ partial "header.html" . }}
     </header>
+
     <main class="p-4 snap-y">
         {{ block "main" . }}{{ end }}
     </main>
-    <footer class="bg-nav2 dark:bg-nav p-4">
+
+    <footer class="bg-nav2 dark:bg-nav text-brand-700 dark:text-brand-200 p-4">
         {{ partial "footer.html" . }}
     </footer>
 </body>
