--- a/layouts/_partials/header.html
+++ b/layouts/_partials/header.html
@@ -6,12 +6,14 @@
     {{ partial "banner.html" . }}
 {{ end }}
 
-<div class="flex justify-between p-4">
+<!-- Main title bar -->
+<div class="max-w-7xl mx-auto flex justify-between p-4">
     <em class="text-xl not-italic font-bold">
-        <a href="/">{{ site.Title }}</a>
+        <a href="{{ .Site.Home.RelPermalink }}">{{ site.Title }}</a>
     </em>
 
     <div class="flex gap-5">
+        <!-- Search button -->
         <button x-on:click="showSearch = !showSearch">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                 <g fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2">
@@ -21,7 +23,9 @@
             </svg>
         </button>
 
+        <!-- Static menu button -->
         <button x-on:click="showMenuStatic = !showMenuStatic">
+            <!-- Dot menu icon -->
             <template x-if="!showMenuStatic">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                     <g fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2">
@@ -32,6 +36,7 @@
                 </svg>
             </template>
 
+            <!-- Close icon -->
             <template x-if="showMenuStatic">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                     <path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -42,13 +47,14 @@
     </div>
 </div>
 
+<!-- Static menu -->
 <div
     class="bg-nav2 dark:bg-nav absolute w-full h-screen pt-8"
     x-show="showMenuStatic"
     x-transition
 >
-    <nav class="max-w-3xs mx-auto text-xl text-center">
-        <ul class="mb-8">
+    <nav class="max-w-3xs mx-auto text-xl flex flex-col gap-8 items-center">
+        <ul>
             {{ with .Site.Menus.header_static }}
             {{ range . }}
             <li class="my-5"><a href="{{ .URL }}">{{ .Name }}</a></li>
@@ -57,8 +63,9 @@
         </ul>
 
         <!-- <div>lang select</div>
-        <div>theme</div>
-        <div>socials</div> -->
+        <div>theme</div>-->
+
+        {{ partialCached "socials.html" . }}
     </nav>
 </div>
 
